# week4-par1

./: CMakeLists.txt  problem1  problem1.cpp  problem10  problem10.cpp  problem11  problem11.cpp  problem12  problem12.cpp  problem2  problem2.cpp  problem3  problem3.cpp  problem4  problem4.cpp  problem5  problem5.cpp  problem6  problem6.cpp  problem7.cpp  problem8  problem8.cpp  problem9.cpp
